--- a/BBNetCore/BBNetCore.csproj
+++ b/BBNetCore/BBNetCore.csproj
@@ -2,17 +2,17 @@
  
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Authors>Luis Jorge</Authors>
+    <Authors>Luis Jr. Jorge</Authors>
     <PackageId>BBNetCore</PackageId>
     <Company>WiseIn Tech</Company>
     <Product>BBNetCore</Product>
     <Description>Biblioteca de acesso à api do serviço de boletos e pagamentos instantaneo brasileiro(PIX) do Banco do Brasil baseada em .Net Standard 2.0.</Description>
-    <Version>1.0.0</Version>
+    <Version>2.0.0</Version>
     <RepositoryUrl>https://github.com/luisjurassic/bbnetcore</RepositoryUrl>
     <LangVersion>latest</LangVersion>
-    <Copyright>Luis Jorge</Copyright>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <Copyright>Luis Jr. Jorge</Copyright>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
     <Title>BBNetCore</Title>
   </PropertyGroup>
 
