--- a/BBNetCore/BBNetCore.csproj
+++ b/BBNetCore/BBNetCore.csproj
@@ -1,31 +1,46 @@
 <Project Sdk="Microsoft.NET.Sdk">
- 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Authors>Luis Jr. Jorge</Authors>
-    <PackageId>BBNetCore</PackageId>
-    <Company>WiseIn Tech</Company>
-    <Product>BBNetCore</Product>
-    <Description>Biblioteca de acesso à api do serviço de boletos e pagamentos instantaneo brasileiro(PIX) do Banco do Brasil baseada em .Net Standard 2.0.</Description>
-    <Version>2.0.0</Version>
-    <RepositoryUrl>https://github.com/luisjurassic/bbnetcore</RepositoryUrl>
-    <LangVersion>latest</LangVersion>
-    <Copyright>Luis Jr. Jorge</Copyright>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0</FileVersion>
-    <Title>BBNetCore</Title>
-  </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>BBNetCore.xml</DocumentationFile>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>BBNetCore.snk</AssemblyOriginatorKeyFile>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <Authors>Luis Jr. Jorge</Authors>
+        <PackageId>BBNetCore</PackageId>
+        <Company>WiseIn Tech</Company>
+        <Product>BBNetCore</Product>
+        <Description>Biblioteca de acesso à api do serviço de boletos e pagamentos instantaneo brasileiro(PIX) do Banco do Brasil baseada em .Net Standard 2.0.</Description>
+        <Version>2.0.1</Version>
+        <LangVersion>latest</LangVersion>
+        <Copyright>Luis Jr. Jorge</Copyright>
+        <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+        <PackageProjectUrl>https://github.com/luisjurassic/bbnetcore</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/luisjurassic/bbnetcore</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>pix, pix bb, pagamentos instantânos, financeiro, C#, .net 8, .net standard</PackageTags>
+        <AssemblyVersion>2.0.1.0</AssemblyVersion>
+        <FileVersion>2.0.1.0</FileVersion>
+        <Title>BBNetCore</Title>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>BBNetCore.xml</DocumentationFile>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+        <DocumentationFile>BBNetCore.xml</DocumentationFile>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <DocumentationFile>BBNetCore.xml</DocumentationFile>
+    </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="LICENSE.md">
+            <Pack>True</Pack>
+            <PackagePath/>
+        </None>
+    </ItemGroup>
 </Project>
