--- a/BBNetCore.Test/BBNetCore.Test.csproj
+++ b/BBNetCore.Test/BBNetCore.Test.csproj
@@ -4,7 +4,7 @@
 
         <IsPackable>false</IsPackable>
 
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
