--- a/BBNetCore/BBNetCore.csproj
+++ b/BBNetCore/BBNetCore.csproj
@@ -12,16 +12,16 @@
         <Company>WiseIn Tech</Company>
         <Product>BBNetCore</Product>
         <Description>Biblioteca de acesso à api do serviço de boletos e pagamentos instantaneo brasileiro(PIX) do Banco do Brasil baseada em .Net Standard 2.0.</Description>
-        <Version>2.0.2</Version>
+        <Version>2.0.3</Version>
         <LangVersion>latest</LangVersion>
         <Copyright>Luis Jr. Jorge</Copyright>
         <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
         <PackageProjectUrl>https://github.com/luisjurassic/bbnetcore</PackageProjectUrl>
         <RepositoryUrl>https://github.com/luisjurassic/bbnetcore</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <PackageTags>pix, pix bb, pagamentos instantânos, financeiro, C#, .net 8, .net standard</PackageTags>
-        <AssemblyVersion>2.0.2.0</AssemblyVersion>
-        <FileVersion>2.0.2.0</FileVersion>
+        <PackageTags>pix, pix bb, pagamentos instantânos, financeiro, C#, .net 8, . net 9, .net standard</PackageTags>
+        <AssemblyVersion>2.0.3.1</AssemblyVersion>
+        <FileVersion>2.0.3.1</FileVersion>
         <Title>BBNetCore</Title>
     </PropertyGroup>
 
